--- a/tintuc.css
+++ b/tintuc.css
@@ -27,17 +27,15 @@
     color: #000;
     background-color: #fff;
 }
-.search-container {
-    position: fixed;
-    top: 5px; /* Đặt vị trí từ đỉnh cách 5px */
-    right: 20px; /* Đặt vị trí từ phải cách 20px */
-    z-index: 999;
-}
 #searchForm {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
+    top: 5px;
+    right: 20px;
+    z-index: 999;
+    position: fixed;
   }
   
 #searchBox {
