--- a/tintuc.css
+++ b/tintuc.css
@@ -92,6 +92,10 @@ button:hover {
 .a textarea {
     height: 100px;
 }
+.content {
+    background-color: aliceblue;
+    margin-top: 60px;
+}
 .btn button {
     background-color: #007bff;
     color: #fff;
